2014-04-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	Fix a couple of 1-byte leaks that have always been here.

2014-04-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_pair_expression):
	Fix const warning.

2014-04-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_start_ns),
	(gst_ttmlparse_sax2_element_end_ns):
	Do not consider style nodes inside region nodes as valid nodes.
	In this way, their attributes are merged with the parent region
	node, which effectively implements nested styling, the last styling
	mechanism left to implement. This is ugly, but according to the spec
	nested styling only happens for style nodes inside region nodes.

2014-04-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_save_attr_stack):
	Add debug warning to clarify why some tests are currently failing.

2014-04-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse_length_pair_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	Support attributes made of two length values. fontSize='20px 20px'
	is now correctly parsed, even though the second value is ignored.

2014-04-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_color_expression),
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstyle.c: (gst_ttml_style_get_length_unit_name),
	(gst_ttml_style_gen_pango_markup):
	* src/gstttmlstyle.h:
	Turn the FontSize attribute into a more generic length, which will
	come in handy for region parsing. Length parsing was (and still is)