@@ -43,7 +43,9 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_FONT_SIZE,
   GST_TTML_ATTR_FONT_STYLE,
   GST_TTML_ATTR_FONT_WEIGHT,
-  GST_TTML_ATTR_TEXT_DECORATION
+  GST_TTML_ATTR_TEXT_DECORATION,
+  GST_TTML_ATTR_ORIGIN,
+  GST_TTML_ATTR_EXTENT
 } GstTTMLAttributeType;
 
 /* Event types */
